added ransack and refactored
